# gtest_ct

./: CMakeList.txt  README.md  SECURITY.md  ci.yml  gtest_ct.h
.github/workflows/: ci.yml
include/: CMakeLists.txt  gtest_ct.h
test/: CMakeLists.txt  passing_tests.cpp
